--- a/.gitignore
+++ b/.gitignore
@@ -504,3 +504,4 @@ Assets/Samples/Flow SDK/2.0.0/NFT Browser/Scripts/NFTDisplay.cs
 Assets/Samples/Flow SDK/2.0.0/NFT Browser/Scripts/NFTDisplay.cs.meta
 Assets/Samples/Flow SDK/2.0.0/NFT Browser/Scripts/NFTViewer.cs
 Assets/Samples/Flow SDK/2.0.0/NFT Browser/Scripts/NFTViewer.cs.meta
+flowEmulator/flowdb/emulator.sqlite
